# voice-sync

./: .gitignore  CHANGELOG.md  LICENSE  README.md
voice-sync-mobile/: gradle.properties  gradlew  settings.gradle
voice-sync-mobile/app/: build.gradle
voice-sync-mobile/app/src/main/: AndroidManifest.xml
voice-sync-mobile/app/src/main/java/com/voicesync/app/: MainActivity.kt
voice-sync-mobile/app/src/main/res/drawable/: ic_launcher_foreground.xml
voice-sync-mobile/app/src/main/res/layout/: activity_main.xml
voice-sync-mobile/app/src/main/res/values/: strings.xml  themes.xml
voice-sync-pc/: Cargo.toml  index.js  package.json
voice-sync-pc/src/: main.rs
